Update StateHandler.java
added public int numOfUsedPSUs(int[] state)